# konstantinstadler.github.io

./: .gitignore  CNAME  README.md  archive.html  conf.py  index.html  pyproject.toml  rss.xml  sitemap.xml  sitemapindex.xml
about/: index.html
blog/: index-1.html  index.html
categories/: country_converter.xml  exiobase.xml  github.xml  google.xml  index.html  open-source.xml  pymrio.xml  python.xml  streaming.xml  twitter.xml
pages/: ARCprojects.OLD  publications.rst
posts/: exiobase-update-v38.rst  plotting-google-trends-search-terms-in-python.ipynb  why-are-there-so-many-country-codes.rst
pres_list/: di4r2018.rst  digilab2018.rst  enviro_info2017.rst  euroscipy2014.rst  iioa2014.rst  iioa2016.rst
presentations/: index.rst
projects/: DESIRE.rst  GLAMURS.rst  HiTEA.rst  SisAl.rst  coco.rst  environmentalfootprints.rst  example.template  index.html  pymrio.rst
pub_list/: andrieu2024_carbonsankey.rst  arvesen2024_bioenergy.rst  battefeld2012_distinct.rst  berthet2024_towards.rst  beyer2009_interferon.rst  bjelle2020_adding.rst  cherubini2016_global.rst  giljum2016_identifying.rst  greenford2020_shifting.rst  hamilton2018_trade.rst  hertwich2018_nullius.rst  hoiberg2024_plastic.rst  ivanova2016_environmental.rst  ivanova2017_mapping.rst  janach2020_ifn.rst  kastner2019_reply.rst  koning2015_effect.rst  leclerc2023_toward.rst  lonka2021_marinvaders.rst  marques2019_nee.rst  pauliuk2015_lifting.rst  pauliuk2017_industrial.rst  pauliuk2024_guidlines.rst  reetz2014_protein.rst  reyes2017_virtual.rst  simas2017_correlation.rst  stadler2010_spatial.rst  (+23 more)
(+118 files in other folders)
