[project]
name = "kst-site"
version = "0.1.0"
description = "Source code for static konstantinstadler.site"
urls = ["https://konstantinstadler.site"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nikola[extras]",
    "poethepoet"
]


[tool.poe.tasks]
new_post = "nikola new_post"
edit_post = "nikola new_post -e"
build = "nikola build"
serve = "nikola serve -b"
dev = "nikola auto -b"
deploy = "nikola github_deploy"

